tests/neg/java-ann-super-class2/Test.scala
def test =
  // Posttyper errors
  new Ann(1) // error
